cluster/homelab/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homelab
  labels:
    app: homepage
spec:
  type: ClusterIP
  selector:
    app: homepage
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
